...
            />
          </View>
        ),
      }}
    >
      <Tabs.Screen name="service"   options={{ title: 'Orações'    }} />
      <Tabs.Screen name="community" options={{ title: 'Comunidade' }} />
      <Tabs.Screen name="home"      options={{ title: 'Início'     }} />
      <Tabs.Screen name="invites"   options={{ title: 'Inbox'      }} />
      <Tabs.Screen name="profile"   options={{ title: 'Perfil'     }} />
    </Tabs>
  );
}

const styles = StyleSheet.create({
  header: {
...
