...
          headerShown: true,
        }}
      />
      <Stack.Screen
        name="unlock"
        options={{
          header: () => <BreadcrumbHeader items={[VIDA, { label: 'Desbloquear' }]} />,
          headerShown: true,
        }}
      />
      <Stack.Screen
        name="ciclo"
        options={{
...
